# agentcon-26

./: .env.example  .gitignore  README.md  demo1_simple_agent.py  demo2_codeact.py  demo3_functional.py  demo4_graph.py  demo5_harness.py  demo6_fides_agent.py  demo6_harness_fides.py  demo7_hosting.py  demo7b_call_hosted_agent.py  pyproject.toml
console/: app.py  formatters.py  textual_state_driver.py
console/components/: list_selection.py  text_input.py
console/observers/: tool_approval.py  tool_call_display.py  web_search_display.py
skills/briefing-research/: SKILL.md
skills/briefing-research/references/: research-checklist.md
skills/briefing-review/: SKILL.md
skills/briefing-review/references/: review-rubric.md
skills/briefing-writing/: SKILL.md
skills/briefing-writing/references/: briefing-template.md
