[project]
name = "agent-framework-demo"
version = "0.1.0"
description = "Microsoft Agent Framework demo with FoundryChatClient, DevUI, workflows, and harness."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "agent-framework-core @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/core",
    "agent-framework-openai @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/openai",
    "agent-framework-foundry @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/foundry",
    "agent-framework-hyperlight @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/hyperlight",
    "agent-framework-hosting @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/hosting",
    "agent-framework-hosting-responses @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/hosting-responses",
    "agent-framework-orchestrations @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/orchestrations",
    "agent-framework-devui @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/devui",
    "agent-framework-tools @ git+https://github.com/microsoft/agent-framework.git@main#subdirectory=python/packages/tools",
    "azure-identity>=1.25.1,<2",
    "pydantic>=2,<3",
    "python-dotenv>=1,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1,<2",
    "rich>=13.7.1,<15",
    "textual>=6.2.1,<7",
    "hypercorn>=0.17,<1",
]

[tool.uv]
prerelease = "if-necessary-or-explicit"
package = false
